[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yongying"
version = "0.1.0"
description = "MVP signal-analysis service based on Yongying strategy notes."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
api = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
]
live = [
  "ccxt>=4.0",
]
dev = [
  "pytest>=8.0",
]

[project.scripts]
yongying = "yongying.cli:main"

[tool.setuptools.packages.find]
include = ["yongying*"]

